src/styles/home.scss
@import "globals";

a{
  text-decoration:none;
}
p{
  margin:0;
}
h1{
  margin: 0;
}
img#selfImg {
  border-radius: 50%;
  width: 100vw;
}
#Exlinks{
  background-color:$ygreen;
  display: inline-block;
  margin:40px 0; 
    img{
      width:90vw;
    }
  .exImg{
    margin: 10px 20px;
  }
}
#selfText{
  background-color: $blue;
  font-size: 1.4em;
  text-align: center;
  padding:10px 20px;
  margin:20px 0 ;
}
.projItem{
  display:flex;
  position: relative;
  text-align: center;
  margin-bottom: 100px;
}
.projItem span {
  color:$white;
  display: inline-block;
  margin:0 auto;
  align-self: flex-end;   
  background-color: $grey;
  width:100%;
  opacity: .7;
  font-size: 1.3em;

}
.projItem:hover{
  transform:scale(1.2);
  z-index:555;
  span{
   font-size: 1.4em;
   opacity: .99;
  }
}
 #proj1{
    background-image: url('../img/mkc.png') ;
    background-size:cover;
  }
  #proj2{
    background-image: url('../img/tothe9s.png');
    background-size:cover;
  }
  #proj3{
    background-image: url('../img/krandrew.png');
    background-size:cover;
  }

@media (min-width:800px){
	
  img#selfImg {
    width: 35vw;
  }
  #Exlinks{
    display: grid;
    grid-column-gap:10px;
    grid-row-gap:10px;
    grid-template-columns:repeat(3,1fr);
    text-align:center;
    margin: 40px auto;

  }
  #Exlinks{ 
    img{
      width:70%;
      height: 100px;
    }
  }  
 
  #selfBox{
    width: 80%;
    margin: 0 auto;
    display: grid;
    grid-column-gap:10px;
    grid-row-gap:10px;
    grid-template-columns:repeat(2,1fr);
    text-align:center;
  }
  #selfText{
    display: flex;
    align-items: center;
    justify-content: center;
    line-height: 80px;
    font-size: 3em;

  }

  #projListMain{
    display:grid;
    width:90%;
    margin: 0 auto;
    grid-column-gap:10px;
    grid-row-gap:10px;
    grid-template-columns:repeat(3,1fr);

  }
  .projItem{
    height: 400px;
    background-color: $grey;
    box-shadow:4px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }
  #home{
    #proj1{
      grid-column:1;

    }
    #proj2{
      grid-column:2;

    }
    #proj3{
      grid-column:3;
    }
  }


}
@media (max-width:799px){
  .projItem{
    width:90%;
    height:200px;
    margin:5%;
    background-color: $grey;
    box-shadow:4px 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  }
}


/*
  grid for project with there are 6 projects
  #proj1{
    grid-column:1/2;
    grid-row:2/4;

  }
  #proj2{
    grid-column:1/3;
    grid-row:1/2;

  }
  #proj3{
    grid-row:1 / span 2;
  }
  #proj4{
    grid-column:3/2;
    grid-row:2/2
  }
  #proj5{
    grid-column: 2/ span 2
  }
  #proj6{
      grid-column:1/4;
      grid-row:4/4
  } 
  */

